feat: standardize format, to make examining diffs easier